# mta-arcade

./: Cargo.toml  README.md  index.html  mta-arcade-78316d8c149ad170.js
.github/workflows/: ci.yml  deploy.yml
assets/shaders/: psx.wgsl
assets/tracks/: disco_machine_gun.beats.json
crates/sim/: Cargo.toml
crates/sim/src/: arena.rs  judgment.rs  lib.rs  match_sim.rs  movement.rs
deploy/signaling/: Dockerfile  fly.toml
docs/: DESIGN.md  ROADMAP.md
src/: gun.rs  main.rs  net.rs  vibe.rs
tools/: beatgrid.py
