[package]
name = "mta-arcade"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = "0.18"
bevy_ahoy = { version = "0.1", default-features = false }
bevy_enhanced_input = "0.24"
avian3d = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AnalyserNode",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "MediaElementAudioSourceNode",
] }

# fast dev iterating: our code light, deps optimized
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# wasm size budget (design doc §8)
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
