[workspace]
members = ["crates/sim"]

[package]
name = "mta-arcade"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mta-sim = { path = "crates/sim" }
bevy_ggrs = { version = "0.20", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.14", features = ["ggrs"] }
serde = { version = "1", features = ["derive"] }
bevy = "0.18"
bevy_ahoy = { version = "0.1", default-features = false }
bevy_enhanced_input = "0.24"
avian3d = "0.6"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AnalyserNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "Document",
    "Element",
    "Location",
    "Response",
    "Storage",
    "Window",
] }

# fast dev iterating: our code light, deps optimized
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# wasm size budget (design doc §8)
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
